--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <title>Livraria DBC-TS</title>
 
-    <link rel="icon" href="./assets/favicon.ico">
+    <link rel="icon" href="/assets/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/normalizer.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/normalizer.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -119,7 +119,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
