feat: atualizando arquivos para deploy

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <title>Livraria DBC-TS</title>
 
-    <link rel="icon" href="/assets/favicon.ico">
+    <link rel="icon" href="./assets/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/normalizer.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/normalizer.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -55,47 +55,47 @@
         </header>
     </section>
 
-    <section class="form-container my-5 mw-50 main-section">
-        <h1 class="text-white text-center mb-3 pt-4 main-title">BookLab - Suas ideias transcritas em textos</h1>
-        <form class="row g-3" id="form">
-            <div class="col-md-6">
-                <label for="inputLivro" class="form-label">Nome do Livro:</label>
-                <input type="text" class="form-control shadow-lg" id="inputLivro" placeholder="Ex: Como ser um bom dev" required>
-            </div>
-            <div class="col-md-6">
-                <label for="inputAutor" class="form-label shadow-lg">Autor:</label>
-                <input type="text" class="form-control" id="inputAutor" placeholder="Ex: William Augusto" required>
-            </div>
-            <div class="col-md-6">
-                <label for="inputCategoria" class="form-label">Categoria principal:</label>
-                <select id="inputCategoria" class="form-select shadow-lg" required>
-                    <option value="" selected disabled hidden>Selecione a categoria do seu livro</option>
-                    <option>Sci-fi</option>
-                    <option>Romance</option>
-                    <option>Ação</option>
-                    <option>Comédia</option>
-                    <option>Tecnologia</option>
-                </select>
-            </div>
-            <div class="col-md-6">
-                <label for="inputPreco" class="form-label">Preço:</label>
-                <input type="number" id="inputPreco" class="form-control" placeholder="Ex: 242.12" step="any">
-            </div>
-            <div class="col-md-12">
-                <label for="inputUrl" class="form-label shadow-lg">Capa:</label>
-                <input type="text" class="form-control" id="inputUrl" placeholder="Url da imagem da capa do livro">
-            </div>
+    <section class="form-section">
+        <div class="py-4 pb-5 container container-form">
+            <h1 class="text-white text-center mb-3 pt-4 main-title">BookLab - Suas ideias transcritas em textos</h1>
+            <form class="row g-3" id="form">
+                <div class="col-md-6">
+                    <label for="inputLivro" class="form-label">Nome do Livro:</label>
+                    <input type="text" class="form-control shadow-lg" id="inputLivro" placeholder="Ex: Como ser um bom dev" required>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputAutor" class="form-label shadow-lg">Autor:</label>
+                    <input type="text" class="form-control" id="inputAutor" placeholder="Ex: William Augusto" required>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputCategoria" class="form-label">Categoria principal:</label>
+                    <select id="inputCategoria" class="form-select shadow-lg" required>
+                        <option value="" selected disabled hidden>Selecione a categoria do seu livro</option>
+                        <option>Sci-fi</option>
+                        <option>Romance</option>
+                        <option>Ação</option>
+                        <option>Comédia</option>
+                        <option>Tecnologia</option>
+                    </select>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPreco" class="form-label">Preço:</label>
+                    <input type="number" id="inputPreco" class="form-control" placeholder="Ex: 242.12" step="any">
+                </div>
+                <div class="col-md-12">
+                    <label for="inputUrl" class="form-label shadow-lg">Capa:</label>
+                    <input type="text" class="form-control" id="inputUrl" placeholder="Url da imagem da capa do livro">
+                </div>
 
-            <div class="mb-3">
-                <label for="inputDescricao" class="form-label shadow-lg">Breve Sinópse:</label>
-                <textarea class="form-control" id="inputDescricao" rows="3" placeholder="Ex: Guia prático sobre boas práticas..." required maxlength="200"></textarea>
-            </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button type="submit" class="btn btn-success shadow" id="sendButton">Cadastrar Livro</button>
-            </div>
-        </form>
-        <ul id="todo" class="list-unstyled my-4">
-        </ul>
+                <div class="mb-3">
+                    <label for="inputDescricao" class="form-label shadow-lg">Breve Sinópse:</label>
+                    <textarea class="form-control" id="inputDescricao" rows="3" placeholder="Ex: Guia prático sobre boas práticas..." required maxlength="200"></textarea>
+                </div>
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button type="submit" class="btn btn-success shadow" id="sendButton">Cadastrar Livro</button>
+                </div>
+            </form>
+        </div>
     </section>
 
     <main>
@@ -119,7 +119,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="./ts/script.js"></script>
 </body>
 
 </html>
